--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta property="og:title" content="Motivation">
+  <meta property="og:description" content="ცნობილი ადამიანების ციტატები">
+  <meta property="og:image" content="./public/motivation.jpeg">
+  <meta property="og:url" content="https://motivationapp.onrender.com/">
   <link rel="icon" type="image/svg+xml" href="/public/site-head-icon.svg" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
