--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta property="og:title" content="Motivation">
   <meta property="og:description" content="Read and add quotes">
-  <meta property="og:image" content="https://imgur.com/gvPnMIw">
+  <meta property="og:image" content="https://i.imgur.com/7qknoCy.png">
   <link rel="icon" type="image/svg+xml" href="/public/site-head-icon.svg" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
